Add Google Search Console verification

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -8,6 +8,9 @@
     <meta name="keywords" content="webarchive converter, webarchive to text, ios safari converter, webarchive reader, convert webarchive">
     <meta name="author" content="WebArchive Converter">
     
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="X9NGYkDhHO3yhLjclUBhIHh4UkcHVi4MajYoVIEuMoo" />
+    
     <!-- Open Graph for social sharing -->
     <meta property="og:title" content="WebArchive to Text Converter">
     <meta property="og:description" content="Convert iOS Safari .webarchive files to plain text for free">
